--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <swagger.bootstrap.ui.version>1.9.6</swagger.bootstrap.ui.version>
 
         <mybatis-plus.version>3.5.1</mybatis-plus.version>
+
+        <sip.version>1.3.0-91</sip.version>
     </properties>
 
     <dependencies>
@@ -97,6 +99,18 @@
             <artifactId>freemarker</artifactId>
         </dependency>
         <!--mybatis-plus结束-->
+
+        <!--sip协议栈开始 -->
+        <dependency>
+            <groupId>javax.sip</groupId>
+            <artifactId>jain-sip-ri</artifactId>
+            <version>${sip.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>log4j-over-slf4j</artifactId>
+        </dependency>
+        <!--sip协议栈结束 -->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
