--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -4,17 +4,81 @@ server:
     context-path: /wvp
 
 spring:
+  application:
+    name: wvp
   flyway:
-    enabled: false
+    enabled: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://192.168.176.169:3306/wvp?serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true&useSSL=false&characterEncoding=utf8
     username: root
     password: 123456
 
-#mybatis-plus配置
+# mybatis-plus配置
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.gengersoft.iot.vmp.entity
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+# 作为GB28181服务器的配置
+sip:
+  # [必须修改] 本机的IP
+  ip: 192.168.190.118
+  # [可选] GB28181服务监听的端口
+  port: 15060
+  # 根据国标6.1.2中规定，domain宜采用ID统一编码的前十位编码。国标附录D中定义前8位为中心编码（由省级、市级、区级、基层编号组成，参照GB/T 2260-2007）
+  # 后两位为行业编码，定义参照附录D.3
+  # 3701020049标识山东济南历下区 信息行业接入
+  # [可选]
+  domain: 4401020049
+  # [可选]
+  id: 44010200492000000001
+  # [可选] 默认设备认证密码，后续扩展使用设备单独密码, 移除密码将不进行校验
+  password: admin123
+  # [可选] 国标级联注册失败，再次发起注册的时间间隔。 默认60秒
+  register-time-interval: 60
+  # [可选] 云台控制速度
+  ptz-speed: 50
+  # 是否存储alarm信息
+  alarm: false
+
+#zlm默认服务器配置
+zlm:
+  # [必须修改] zlm服务器唯一id，用于触发hook时区别是哪台服务器,general.mediaServerId
+  server-id: FQ3TF8yT83wh5Wvz
+  # [必须修改] zlm服务器的内网IP
+  ip: 192.168.176.169
+  # [可选] zlm服务器的hook所使用的IP
+  hook-ip: 192.168.190.118
+  # [可选] wvp在国标信令中使用的ip，此ip为摄像机可以访问到的ip
+  sdp-ip: 192.168.176.169
+  # [可选] 返回流地址时的ip，置空使用 media.ip
+  stream-ip: 192.168.176.169
+  # [必须修改] zlm服务器的http.port
+  http-port: 8080
+  # [可选] zlm服务器的http.sslport, 置空使用zlm配置文件配置
+  http-ssl-port: 443
+  # [可选] zlm服务器的rtmp.port, 置空使用zlm配置文件配置
+  rtmp-port: 8935
+  # [可选] zlm服务器的rtmp.sslport, 置空使用zlm配置文件配置
+  rtmp-ssl-port: 0
+  # [可选] zlm服务器的 rtsp.port, 置空使用zlm配置文件配置
+  rtsp-port: 8554
+  # [可选] zlm服务器的 rtsp.sslport, 置空使用zlm配置文件配置
+  rtsp-ssl-port: 0
+  # [可选] zlm服务器的 rtp_proxy.port, 置空使用zlm配置文件配置
+  rtp-proxy-port: 10000
+  # [可选] 是否自动配置ZLM, 如果希望手动配置ZLM, 可以设为false, 不建议新接触的用户修改
+  auto-config: true
+  # [可选] zlm服务器的hook.admin_params=secret
+  secret: 035c73f7-bb6b-4889-a715-d9eb2d1925cc
+  # 启用多端口模式, 多端口模式使用端口区分每路流，兼容性更好。 单端口使用流的ssrc区分， 点播超时建议使用多端口测试
+  # [可选] 是否启用多端口模式, 开启后会在portRange范围内选择端口用于媒体流传输
+  rtp-enable: true
+  # [可选] 在此范围内选择端口用于媒体流传输, 必须提前在zlm上配置该属性，不然自动配置此属性可能不成功
+  rtp-port-range:  30000,30500
+  # 录像辅助服务， 部署此服务可以实现zlm录像的管理与下载， 0 表示不使用
+  record-assist-port: 0
+  # [可选] zlm服务器的 hook.alive_interval, 置空使用zlm配置文件配置
+  hook-alive-interval: 120
