--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,10 @@
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>${fastjson.version}</version>
@@ -117,6 +121,13 @@
             <artifactId>log4j-over-slf4j</artifactId>
         </dependency>
         <!--sip协议栈结束 -->
+
+        <!--okhttp开始-->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+        </dependency>
+        <!--okhttp结束-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
