--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,13 @@
         </dependency>
         <!--okhttp结束-->
 
+        <!--security开始-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <!--security结束-->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
