--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
         <mybatis-plus.version>3.5.1</mybatis-plus.version>
 
         <sip.version>1.3.0-91</sip.version>
+
+        <dom4j.version>2.1.3</dom4j.version>
     </properties>
 
     <dependencies>
@@ -135,6 +137,14 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <!--security结束-->
+
+        <!--dom4开始-->
+        <dependency>
+            <groupId>org.dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>${dom4j.version}</version>
+        </dependency>
+        <!--dom4结束-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
