通过定时任务实现ZLM心跳检测

--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,13 @@
         </dependency>
         <!--dom4结束-->
 
+        <!--quartz开始-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+        </dependency>
+        <!--quartz结束-->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
