完善代码 完成设备通道信息查询

--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,13 @@
         </dependency>
         <!--quartz结束-->
 
+        <!--redis开始-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!--redis结束-->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
